@@ -1,3 +1,7 @@
+2008-12-03  Hans Boehm <Hans.Boehm@hp.com> (Really Ivan Maidansky)
+	* blacklst.c (GC_print_source_pointer): Don't call GC_print_heap_obj
+	with lock.
+
 2008-12-01  Hans Boehm <Hans.Boehm@hp.com>
 	* reclaim.c: (GC_reclaim_block): Scan even nearly full blocks
 	if we are checking for leaks.
